wayland: Guard wayland object destructors

Kidletime is a singleton and the client API works by supplying ints to add
or remove timeouts. When not all timeouts are removed before program exits,
trying to destroy the wayland objects will crash since the lifetime of the
wayland connection is tied to the QGuiApplication.
BUG:465801
FIXED-IN:5.104